--- a/base/build.gradle
+++ b/base/build.gradle
@@ -1,11 +1,12 @@
+import com.orcchg.direcall.build.Dependencies
+
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "io.reactivex.rxjava2:rxjava:2.2.19"
+    implementation(
+            Dependencies.Lib.ktStdLibJdk7,
+            Dependencies.Rx.rx
+    )
 }
-
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
