--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,15 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+import com.orcchg.direcall.build.Dependencies
+
 buildscript {
-    ext.kotlin_version = "1.3.72"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath(
+                Dependencies.Gradle.androidGradle,
+                Dependencies.Gradle.ktGradle
+        )
     }
 }
 
