--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,13 +1,14 @@
+import com.orcchg.direcall.build.Dependencies
+
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(":base")
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "io.reactivex.rxjava2:rxjava:2.2.19"
-    implementation "io.reactivex.rxjava2:rxkotlin:2.4.0"
+    implementation(
+            Dependencies.Lib.ktStdLibJdk7,
+            Dependencies.Rx.rx,
+            Dependencies.Rx.rxKt
+    )
 }
-
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
