--- a/util/build.gradle
+++ b/util/build.gradle
@@ -1,10 +1,9 @@
+import com.orcchg.direcall.build.Dependencies
+
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation Dependencies.Lib.ktStdLibJdk7
 }
-
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
