--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation(
+            project(':androidUtil'),
             project(':base'),
             project(':domain')
     )
@@ -49,6 +50,7 @@ dependencies {
             Dependencies.AndroidX.fragmentKtx,
             Dependencies.Lib.glide,
             Dependencies.Lib.ktStdLib,
+            Dependencies.Lib.timber,
             Dependencies.Rx.rx,
             Dependencies.View.constraintLayout,
             Dependencies.View.recyclerView
