--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 import com.orcchg.direcall.build.Dependencies
 
 buildscript {
+    ext {
+        kotlin_version = '1.3.72'
+    }
     repositories {
         google()
         jcenter()
@@ -10,6 +13,7 @@ buildscript {
             Dependencies.Gradle.androidGradle,
             Dependencies.Gradle.ktGradle
         )
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
