--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     }
     dependencies {
         classpath(
+            Dependencies.AndroidX.navigationSafeArgs,
             Dependencies.Gradle.androidGradle,
             Dependencies.Gradle.ktGradle
         )
