Handle clicks on list items

--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -33,6 +33,8 @@ dependencies {
             Dependencies.AndroidX.fragmentKtx,
             Dependencies.AndroidX.liveData,
             Dependencies.Rx.rx,
+            Dependencies.Rx.rxAndroid,
+            Dependencies.Rx.rxBinding,
             Dependencies.Rx.autoDispose,
             Dependencies.Rx.autoDisposeAndroidAC
     )
