Add ktlint and fixed it's checks. Also organize build scripts

--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -1,8 +1,8 @@
 import com.orcchg.direcall.build.Dependencies
 
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: Dependencies.Plugin.androidLib
+apply plugin: Dependencies.Plugin.kotlinAndroid
+apply plugin: Dependencies.Plugin.kotlinAndroidExt
 
 android {
     compileSdkVersion 29
