--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,11 @@
 import com.orcchg.direcall.build.Dependencies
+import com.orcchg.direcall.build.Versions
 
 buildscript {
-    ext {
-        kotlin_version = '1.3.72'
-    }
     repositories {
         google()
         jcenter()
+        maven { url 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
         classpath(
@@ -14,17 +13,30 @@ buildscript {
             Dependencies.Gradle.androidGradle,
             Dependencies.Gradle.ktGradle
         )
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.ktStdLib}"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:${Versions.ktlintGradle}"
     }
 }
 
 allprojects {
+    apply plugin: Dependencies.Plugin.ktlint
+
     repositories {
         google()
         jcenter()
     }
-}
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+    ktlint {
+        version = Versions.ktlint
+        outputToConsole = true
+        outputColorName = "RED"
+        ignoreFailures = false
+        enableExperimentalRules = false
+        disabledRules = ["final-newline", "import-ordering", "parameter-list-wrapping", "indent"]
+        filter {
+            exclude("**/generated/**")
+            exclude("**/script/**")
+            include("**/kotlin/**")
+        }
+    }
 }
