--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,7 +1,7 @@
 import com.orcchg.direcall.build.Dependencies
 
-apply plugin: 'java-library'
-apply plugin: 'kotlin'
+apply plugin: Dependencies.Plugin.javaLib
+apply plugin: Dependencies.Plugin.kotlin
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
