Provide dependencies using Dagger2 DI
DaggerAndroid is used to inject ViewModelFactory into Fragment via it's associated subcomponent.
Each time the Fragment is recreated, subcomponent is also recreated and a new instance of ViewModelFactory
is recreated and injected. Nevertheless, ViewModel is created only once per Fragment's session and cached
into ViewModelStore. Thus, in order to not to waste resources on creating ViewModelFactory's ctor arguments
any time ViewModelFactory is injected, Provider<ViewModel> is used instead. Such Provider<ViewModel> resides
in subcomponent and recreated, but it's 'get()' method is actually called only once per Fragment's session,
when ViewModelFactory#create() is called for the very first time, when ViewModel instance is required.

Provider<ViewModel> created in subcomponent, subcomponent has access to it's parent component - AppComponent -
and all it's dependencies: GithubRepository provided by DataComponent, and SchedulersFactory provided by SchedulersFactoryModule
with singleton-scope in order to prevent from multiple instantiation within AppComponent, since the access to these
dependencies is taken from multiple places - since we have multiple Fragments.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ import com.orcchg.direcall.build.Dependencies
 apply plugin: Dependencies.Plugin.androidApp
 apply plugin: Dependencies.Plugin.kotlinAndroid
 apply plugin: Dependencies.Plugin.kotlinAndroidExt
+apply plugin: Dependencies.Plugin.kotlinAnnotation
 apply plugin: Dependencies.Plugin.navSafeArgs
 
 android {
@@ -16,6 +17,7 @@ dependencies {
     implementation(
             project(':androidUtil'),
             project(':base'),
+            project(':data'),
             project(':domain')
     )
     implementation(
@@ -24,6 +26,8 @@ dependencies {
             Dependencies.AndroidX.fragmentKtx,
             Dependencies.AndroidX.navigation,
             Dependencies.AndroidX.navigationUi,
+            Dependencies.Di.dagger,
+            Dependencies.Di.daggerAndroidSupport,
             Dependencies.Lib.glide,
             Dependencies.Lib.ktStdLib,
             Dependencies.Lib.timber,
@@ -36,6 +40,11 @@ dependencies {
             Dependencies.View.constraintLayout,
             Dependencies.View.recyclerView
     )
+    kapt(
+            Dependencies.Di.daggerAndroidProcessor,
+            Dependencies.Di.daggerCompiler
+    )
+
     testImplementation Dependencies.Test.junit
     androidTestImplementation(
             Dependencies.AndroidTest.espresso,
