--- a/data/build.gradle
+++ b/data/build.gradle
@@ -7,6 +7,7 @@ apply plugin: Dependencies.Plugin.kotlinAnnotation
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(
+            project(':base'),
             project(':domain'),
             project(':util')
     )
@@ -23,4 +24,8 @@ dependencies {
     kapt(
             Dependencies.Parser.moshiKotlinCodegen
     )
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
 }
