Implement DI with Dagger, using single global application component (AppComponent)

--- a/base/build.gradle
+++ b/base/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     )
     implementation(
             Dependencies.Lib.ktStdLib,
+            Dependencies.Di.dagger,
             Dependencies.Rx.rx
     )
 }
