--- a/feature/github_user_details/build.gradle
+++ b/feature/github_user_details/build.gradle
@@ -21,6 +21,8 @@ dependencies {
             Dependencies.AndroidX.fragmentKtx,
             Dependencies.AndroidX.navigation,
             Dependencies.AndroidX.navigationUi,
+            Dependencies.Di.dagger,
+            Dependencies.Di.daggerAndroidSupport,
             Dependencies.Lib.glide,
             Dependencies.Lib.ktStdLib,
             Dependencies.Lib.timber,
