--- a/core/scheduler/build.gradle
+++ b/core/scheduler/build.gradle
@@ -3,6 +3,7 @@ import com.orcchg.direcall.build.Dependencies
 apply plugin: Dependencies.Plugin.androidLib
 apply plugin: Dependencies.Plugin.kotlinAndroid
 apply plugin: Dependencies.Plugin.kotlinAndroidExt
+apply plugin: Dependencies.Plugin.kotlinAnnotation
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -12,7 +13,11 @@ dependencies {
     )
     implementation(
             Dependencies.Lib.ktStdLib,
+            Dependencies.Di.dagger,
             Dependencies.Rx.rx,
             Dependencies.Rx.rxAndroid
+    )
+    kapt(
+            Dependencies.Di.daggerCompiler
     )
 }
