--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,11 @@
+include ':core:service_locator_impl'
 include ':androidUtil'
 include ':app'
 include ':base'
 include ':core:network'
 include ':core:scheduler_api'
 include ':core:scheduler'
+include ':core:service_locator'
 include ':core:ui_core_lib'
 include ':design'
 include ':feature:github_repo'
