--- a/core/service_locator/build.gradle
+++ b/core/service_locator/build.gradle
@@ -6,7 +6,6 @@ apply plugin: Dependencies.Plugin.kotlin
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(
-            Dependencies.Lib.ktStdLib,
-            Dependencies.Rx.rx
+            Dependencies.Lib.ktStdLib
     )
 }
