--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -7,6 +7,7 @@ apply plugin: Dependencies.Plugin.kotlinAnnotation
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(
+            Dependencies.Di.koin,
             Dependencies.Lib.ktStdLib,
             Dependencies.Network.okHttpLog,
             Dependencies.Network.retrofit,
