--- a/feature/github_user_list/build.gradle
+++ b/feature/github_user_list/build.gradle
@@ -21,6 +21,10 @@ dependencies {
             Dependencies.AndroidX.fragmentKtx,
             Dependencies.AndroidX.navigation,
             Dependencies.AndroidX.navigationUi,
+            Dependencies.Di.koin,
+            Dependencies.Di.koinAndroid,
+            Dependencies.Di.koinAndroidVM,
+            Dependencies.Di.koinExt,
             Dependencies.Lib.glide,
             Dependencies.Lib.ktStdLib,
             Dependencies.Lib.timber,
