Migrate from Dagger to Hilt. Have to pass args to ViewModel at runtime, since Hilt does not support dagger modules with ctors with args (either Module is a Kotlin Object, or it has to be zero-arg ctor)

--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -15,7 +15,7 @@ dependencies {
             Dependencies.AndroidX.appCompat,
             Dependencies.AndroidX.fragmentKtx,
             Dependencies.AndroidX.liveData,
-            Dependencies.Di.dagger,
+            Dependencies.Di.hilt,
             Dependencies.Rx.rx,
             Dependencies.Rx.rxAndroid,
             Dependencies.Rx.rxBinding,
@@ -23,6 +23,6 @@ dependencies {
             Dependencies.Rx.autoDisposeAndroidAC
     )
     kapt(
-            Dependencies.Di.daggerCompiler
+            Dependencies.Di.hiltCompiler
     )
 }
