--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
         )
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.ktStdLib}"
         classpath "org.jlleitschuh.gradle:ktlint-gradle:${Versions.ktlintGradle}"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:${Versions.hilt}"
     }
 }
 
@@ -65,7 +66,7 @@ subprojects {
 
                     javaCompileOptions {
                         annotationProcessorOptions {
-                            arguments = [
+                            arguments += [
                                     "room.schemaLocation"  : "$projectDir/schemas".toString(),
                                     "room.incremental"     : "true",
                                     "room.expandProjection": "true"
