--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,6 @@ import com.orcchg.direcall.build.Dependencies
 import com.orcchg.direcall.build.Versions
 
 buildscript {
-    ext {
-        kotlin_version = '1.4.10'
-    }
     repositories {
         google()
         jcenter()
@@ -18,6 +15,7 @@ buildscript {
         )
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.ktStdLib}"
         classpath "org.jlleitschuh.gradle:ktlint-gradle:${Versions.ktlintGradle}"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:${Versions.hilt}"
     }
 }
 
@@ -68,7 +66,7 @@ subprojects {
 
                     javaCompileOptions {
                         annotationProcessorOptions {
-                            arguments = [
+                            arguments += [
                                     "room.schemaLocation"  : "$projectDir/schemas".toString(),
                                     "room.incremental"     : "true",
                                     "room.expandProjection": "true"
