--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -1,13 +1,13 @@
 import com.orcchg.direcall.build.Dependencies
 
-apply plugin: Dependencies.Plugin.javaLib
-apply plugin: Dependencies.Plugin.kotlin
+apply plugin: Dependencies.Plugin.androidLib
+apply plugin: Dependencies.Plugin.kotlinAndroid
 apply plugin: Dependencies.Plugin.kotlinAnnotation
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(
-            Dependencies.Di.dagger,
+            Dependencies.Di.hilt,
             Dependencies.Lib.ktStdLib,
             Dependencies.Network.okHttpLog,
             Dependencies.Network.retrofit,
@@ -18,7 +18,7 @@ dependencies {
             Dependencies.Parser.moshiKotlin
     )
     kapt(
-            Dependencies.Di.daggerCompiler,
+            Dependencies.Di.hiltCompiler,
             Dependencies.Parser.moshiKotlinCodegen
     )
 }
