--- a/core/ui_core_lib/build.gradle
+++ b/core/ui_core_lib/build.gradle
@@ -10,8 +10,7 @@ dependencies {
             Dependencies.AndroidX.appCompat,
             Dependencies.AndroidX.fragmentKtx,
             Dependencies.AndroidX.liveData,
-            Dependencies.Di.dagger,
-            Dependencies.Di.daggerAndroidSupport,
+            Dependencies.Di.hilt,
             Dependencies.Rx.rx,
             Dependencies.Rx.autoDispose,
             Dependencies.Rx.autoDisposeAndroidAC
