--- a/feature/github_repo/build.gradle
+++ b/feature/github_repo/build.gradle
@@ -4,6 +4,7 @@ apply plugin: Dependencies.Plugin.androidLib
 apply plugin: Dependencies.Plugin.kotlinAndroid
 apply plugin: Dependencies.Plugin.kotlinAndroidExt
 apply plugin: Dependencies.Plugin.kotlinAnnotation
+apply plugin: Dependencies.Plugin.daggerHilt
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -22,8 +23,8 @@ dependencies {
             Dependencies.AndroidX.fragmentKtx,
             Dependencies.AndroidX.navigation,
             Dependencies.AndroidX.navigationUi,
-            Dependencies.Di.dagger,
-            Dependencies.Di.daggerAndroidSupport,
+            Dependencies.Di.hilt,
+            Dependencies.Di.hiltVM,
             Dependencies.Lib.ktStdLib,
             Dependencies.Lib.timber,
             Dependencies.Network.retrofit,
@@ -39,6 +40,11 @@ dependencies {
             Dependencies.View.recyclerView
     )
     kapt(
-            Dependencies.Di.daggerCompiler
+            Dependencies.Di.hiltCompiler,
+            Dependencies.Di.hiltVMCompiler
     )
+}
+
+kapt {
+    correctErrorTypes true
 }
