Use dagger component dependencies for feature gradle-modules rather than aggregating all features' bindings into one single AppComponent.
Component dependencies are useful when it's needed to provide dependencies between sibling features or when Dynamic Features are used.
Here we switch to use Dynamic Features, since sibling features do not depend on each other. Bindings are provided from AppComponent
via multibindings, although feature modules could use other Core-lib components as direct dependencies: this reduces boilerplate.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,20 +16,18 @@ dependencies {
     implementation(
             project(':base'),
             project(':design'),
+            project(':core:di'),
+            project(':core:network_api'),
             project(':core:network'),
             project(':core:scheduler_api'),
             project(':core:scheduler'),
             project(':core:ui_core_lib'),
-            project(':feature:github_repo'),
-            project(':feature:github_user_details'),
-            project(':feature:github_user_list'),
             project(':navigation')
     )
     implementation(
             Dependencies.AndroidX.appCompat,
             Dependencies.AndroidX.coreKtx,
             Dependencies.Di.dagger,
-            Dependencies.Di.daggerAndroidSupport,
             Dependencies.Lib.ktStdLib,
             Dependencies.Lib.timber,
             Dependencies.Network.okHttpLog,
@@ -41,7 +39,6 @@ dependencies {
             Dependencies.View.constraintLayout
     )
     kapt(
-            Dependencies.Di.daggerAndroidProcessor,
             Dependencies.Di.daggerCompiler
     )
     testImplementation Dependencies.Test.junit
