--- a/core/scheduler/build.gradle
+++ b/core/scheduler/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation(
             project(':base'),
+            project(':core:di'),
             project(':core:scheduler_api')
     )
     implementation(
