--- a/core/di/build.gradle
+++ b/core/di/build.gradle
@@ -2,15 +2,10 @@ import com.orcchg.direcall.build.Dependencies
 
 apply plugin: Dependencies.Plugin.javaLib
 apply plugin: Dependencies.Plugin.kotlin
-apply plugin: Dependencies.Plugin.kotlinAnnotation
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(
-            project(':core:di')
-    )
-    implementation(
-            Dependencies.Lib.ktStdLib,
-            Dependencies.Rx.rx
+            Dependencies.Lib.ktStdLib
     )
 }
