--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -7,6 +7,10 @@ apply plugin: Dependencies.Plugin.kotlinAnnotation
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(
+            project(':core:di'),
+            project(':core:network_api')
+    )
+    implementation(
             Dependencies.Di.dagger,
             Dependencies.Lib.ktStdLib,
             Dependencies.Network.okHttpLog,
