--- a/core/network_api/build.gradle
+++ b/core/network_api/build.gradle
@@ -2,7 +2,6 @@ import com.orcchg.direcall.build.Dependencies
 
 apply plugin: Dependencies.Plugin.javaLib
 apply plugin: Dependencies.Plugin.kotlin
-apply plugin: Dependencies.Plugin.kotlinAnnotation
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -11,6 +10,6 @@ dependencies {
     )
     implementation(
             Dependencies.Lib.ktStdLib,
-            Dependencies.Rx.rx
+            Dependencies.Network.retrofit
     )
 }
