--- a/feature/github_repo/build.gradle
+++ b/feature/github_repo/build.gradle
@@ -2,14 +2,16 @@ import com.orcchg.direcall.build.Dependencies
 
 apply plugin: Dependencies.Plugin.androidLib
 apply plugin: Dependencies.Plugin.kotlinAndroid
-apply plugin: Dependencies.Plugin.kotlinAndroidExt
 apply plugin: Dependencies.Plugin.kotlinAnnotation
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation(
             project(':androidUtil'),
+            project(':app'),
             project(':base'),
+            project(':core:di'),
+            project(':core:network_api'),
             project(':core:scheduler_api'),
             project(':core:ui_core_lib'),
             project(':design'),
@@ -23,7 +25,6 @@ dependencies {
             Dependencies.AndroidX.navigation,
             Dependencies.AndroidX.navigationUi,
             Dependencies.Di.dagger,
-            Dependencies.Di.daggerAndroidSupport,
             Dependencies.Lib.ktStdLib,
             Dependencies.Lib.timber,
             Dependencies.Network.retrofit,
