--- a/feature/github_user_list/build.gradle
+++ b/feature/github_user_list/build.gradle
@@ -2,13 +2,16 @@ import com.orcchg.direcall.build.Dependencies
 
 apply plugin: Dependencies.Plugin.androidLib
 apply plugin: Dependencies.Plugin.kotlinAndroid
-apply plugin: Dependencies.Plugin.kotlinAndroidExt
+apply plugin: Dependencies.Plugin.kotlinAnnotation
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation(
             project(':androidUtil'),
+            project(':app'),
             project(':base'),
+            project(':core:di'),
+            project(':core:network_api'),
             project(':core:scheduler_api'),
             project(':core:ui_core_lib'),
             project(':design'),
@@ -22,7 +25,6 @@ dependencies {
             Dependencies.AndroidX.navigation,
             Dependencies.AndroidX.navigationUi,
             Dependencies.Di.dagger,
-            Dependencies.Di.daggerAndroidSupport,
             Dependencies.Lib.glide,
             Dependencies.Lib.ktStdLib,
             Dependencies.Lib.timber,
@@ -37,5 +39,8 @@ dependencies {
             Dependencies.Rx.rxBindingCore,
             Dependencies.View.constraintLayout,
             Dependencies.View.recyclerView
+    )
+    kapt(
+            Dependencies.Di.daggerCompiler
     )
 }
