--- a/feature/github_repo/src/main/AndroidManifest.xml
+++ b/feature/github_repo/src/main/AndroidManifest.xml
@@ -1,1 +1,13 @@
-<manifest package="com.orcchg.direcall.github_repo" />
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:dist="http://schemas.android.com/apk/distribution"
+    package="com.orcchg.direcall.github_repo">
+
+    <dist:module
+        dist:instant="false"
+        dist:title="@string/title_github_repo">
+        <dist:delivery>
+            <dist:install-time />
+        </dist:delivery>
+        <dist:fusing dist:include="true" />
+    </dist:module>
+</manifest>
