--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,8 @@ include ':design'
 include ':navigation'
 include ':util'
 include ':lint-rules'
+include ':Core:AppCoreLib:AppCoreLibApi'
+include ':Core:AppCoreLib:AppCoreLibImpl'
 include ':Core:DiCoreLib'
 include ':Core:NetCoreLib:NetCoreLibApi'
 include ':Core:NetCoreLib:NetCoreLibImpl'
@@ -15,6 +17,8 @@ include ':Feature:GithubUserList:GithubUserListApi'
 include ':Feature:GithubUserList:GithubUserListImpl'
 include ':Feature:GithubUserDetails:GithubUserDetailsApi'
 include ':Feature:GithubUserDetails:GithubUserDetailsImpl'
+include ':Feature:GithubUserGists:GithubUserGistsApi'
+include ':Feature:GithubUserGists:GithubUserGistsImpl'
 include ':Feature:GithubRepo:GithubRepoApi'
 include ':Feature:GithubRepo:GithubRepoImpl'
 rootProject.name = "DiRecall"
